--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <ul class="navlinks">
-                        <li><a href="Home.html">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="Resume.html">RESUME</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
