--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1>Zidan Ahmad Romdhani</h1>
                     <p>Saya adalah lulusan dari <b>SMK AL - HUDA</b> Kebon Jeruk,Jakarta Barat</p>
                     <div class="btn-group">
-                        <a href="#" class="btn active">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1NGd0vNvXg-EA1cB3I0dVj-hVVJ8T6RJF/view?usp=drive_link" class="btn active">Download CV</a>
                         <a href="#" class="btn">Contact</a>
                     </div>
                     <div class="social">
