--- a/Resume.html
+++ b/Resume.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="Resume.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
-     <header>  
-    <div class="hero-header">
-            <div class="wrapper">
+<body> 
+   
         <header>
             <div class="logo">
                 <i class="fa-solid fa-z"></i>
-                <div class="logo-text"><a href="Home.html">Zidan Ahmad</a></div>
+                <div class="logo-text"><a href="index.html">Zidan Ahmad</a></div>
             </div>
                 <nav>
                     <div class="togglebtn">
@@ -25,7 +23,7 @@
 
                     <ul class="navlinks">
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="Resume.html">RESUME</a></li>
+                        <li><a href="Resume.html" class="active">RESUME</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
@@ -40,10 +38,10 @@
                 <div class="profile-details">
                     <div class="intro">
                         <h2>Zidan Ahmad Romdhani</h2>
-                        <h4><a href="https://campus.quipper.com/kampuspedia/fresh-graduate">Fresh Graduate</a></h4>
+                        <h4><a href="">Fresh Graduate</a></h4>
                         <div class="social">
-                            <a href="https://www.instagram.com/zdnahmadd?r=nametag"><i class="fa-brands fa-instagram" style="color:var(--purple)"></i></a>
-                            <a href="https://wa.me/085283938745"><i class="fa-brands fa-whatsapp" style="color:var(--green)"></i></a>
+                            <a href="https://www.instagram.com/zdnahmadd?r=nametag" target="_blank"><i class="fa-brands fa-instagram" style="color:var(--purple)"></i></a>
+                            <a href="https://wa.me/085283938745" target="_blank"><i class="fa-brands fa-whatsapp" style="color:var(--green)"></i></a>
                             <a href="mailto:zidan313ahmad@gmail.com?subject=tanya%20Project&body=Saya%20Tertarik%20Dengan%Project%20Anda"><i class="fa-regular fa-envelope" style="color:var(--skyblue)"></i></a>
                         </div>
                     </div>
@@ -68,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="download-btn"><i class="fa fa-download"></i> 
+                <button class="download-btn"><a href="#"></a><i class="fa fa-download"></i> 
                      Download CV</button>
             </div>
         </div>
@@ -81,7 +79,7 @@
             <p>
                 Saya mngambil jurusan Teknik Komputer dan Jaringan
             </p>
-            <h2>What I Do !!!</h2>
+            
                <div class="work">
                 <div class="workbox">
                     <div class="icon">
